--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
